--- a/MyCity4Kids/MyCity4Kids/res/layout/item_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/item_layout.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp">
 
@@ -83,10 +84,10 @@
         android:textStyle="bold"
         tools:text="Was india better then south africa in current serise?" />
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/video_layout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:layout_below="@+id/textViewTitle"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
@@ -102,6 +103,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@id/title"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
             android:scaleType="centerCrop"
             android:src="@drawable/default_article" />
 
@@ -110,9 +117,10 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:visibility="gone" />
-    </FrameLayout>
+            android:visibility="visible" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/countlikecontainer"
