--- a/MyCity4Kids/MyCity4Kids/res/layout/facebook_ad_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/facebook_ad_list_item.xml
@@ -164,7 +164,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_centerInParent="true"
                         android:contentDescription="@string/author_img"
-                        android:scaleType="fitXY" />
+                        android:scaleType="centerCrop" />
 
                     <View
                         android:layout_width="match_parent"
