--- a/MyCity4Kids/MyCity4Kids/res/layout/horizontal_recycler_view_video_challenge.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/horizontal_recycler_view_video_challenge.xml
@@ -31,7 +31,7 @@
                 android:layout_width="260dp"
                 android:layout_height="160dp"
                 android:foreground="@drawable/gradient_in_video_challenge_image"
-                android:scaleType="fitXY"
+                android:scaleType="centerCrop"
                 android:src="@drawable/default_article" />
 
             <com.mycity4kids.widget.CustomFontTextView
