--- a/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_momvlog_list_item.xml
@@ -65,7 +65,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_centerInParent="true"
                         android:contentDescription="@string/author_img"
-                        android:scaleType="fitCenter" />
+                        android:scaleType="centerCrop" />
 
                     <View
                         android:layout_width="match_parent"
