--- a/MyCity4Kids/MyCity4Kids/res/layout/item_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/item_layout.xml
@@ -124,6 +124,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:visibility="gone" />
     </RelativeLayout>
