kids flow changed

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_family_info.xml
@@ -392,7 +392,6 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="16dp"
                 android:orientation="vertical">
-
             </LinearLayout>
 
             <include
@@ -401,7 +400,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="15dp" />
+                android:layout_marginRight="15dp"
+                android:visibility="visible"/>
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/textAddChild"
