--- a/MyCity4Kids/MyCity4Kids/res/layout/dynamic_child_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/dynamic_child_view.xml
@@ -6,89 +6,96 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/linearKidsEmptyView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/textHeader"
-            android:layout_width="0dp"
-            android:layout_weight=".5"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/rewards_kid_detail"
-            android:textColor="@color/app_grey"
-            app:fontName="oswald_regular.ttf"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal">
 
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/textDeleteChild"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="4dp"
-            android:background="@drawable/shape_red_border"
-            android:gravity="center"
-            android:text="DELETE"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/app_red"
-            android:textSize="14sp"
-            android:visibility="gone"
-            app:fontName="oswald_regular.ttf" />
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/textHeader"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:text="@string/rewards_kid_detail"
+                android:textColor="@color/app_grey"
+                app:fontName="oswald_regular.ttf"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/textDeleteChild"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="4dp"
+                android:background="@drawable/shape_red_border"
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="DELETE"
+                android:textColor="@color/app_red"
+                android:textSize="14sp"
+                android:visibility="visible"
+                app:fontName="oswald_regular.ttf" />
 
-    <LinearLayout
-        android:id="@+id/layoutKidsDOB"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp">
+        </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/layoutExptectedDate"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".5">
+        <LinearLayout
+            android:id="@+id/layoutKidsDOB"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp">
 
-            <android.support.v7.widget.AppCompatSpinner
-                android:id="@+id/spinnerGender"
-                android:layout_width="match_parent"
+            <RelativeLayout
+                android:id="@+id/layoutExptectedDate"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight=".5">
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/spinnerGender"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/mainprofile_thin_border"
+                    android:gravity="center_vertical"
+                    android:hint="DD/MM/YYYY"
+                    android:textColor="#000"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <ImageView
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:layout_alignTop="@+id/spinnerGender"
+                    android:layout_alignRight="@id/spinnerGender"
+                    android:layout_alignBottom="@+id/editExpectedDate"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginRight="11dp"
+                    android:layout_marginBottom="12dp"
+                    android:src="@drawable/arrowdownnew" />
+            </RelativeLayout>
+
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/textKidsDOB"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/layoutExptectedDate"
+                android:layout_weight=".5"
                 android:background="@drawable/mainprofile_thin_border"
                 android:gravity="center_vertical"
                 android:hint="DD/MM/YYYY"
+                android:paddingLeft="10dp"
                 android:textColor="#000"
                 app:layout_constraintEnd_toEndOf="parent" />
-
-            <ImageView
-                android:layout_width="14dp"
-                android:layout_height="14dp"
-                android:layout_alignTop="@+id/spinnerGender"
-                android:layout_alignRight="@id/spinnerGender"
-                android:layout_alignBottom="@+id/editExpectedDate"
-                android:layout_marginTop="14dp"
-                android:layout_marginRight="11dp"
-                android:layout_marginBottom="12dp"
-                android:src="@drawable/arrowdownnew" />
-        </RelativeLayout>
-
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/textKidsDOB"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/layoutExptectedDate"
-            android:layout_weight=".5"
-            android:background="@drawable/mainprofile_thin_border"
-            android:gravity="center_vertical"
-            android:hint="DD/MM/YYYY"
-            android:paddingLeft="10dp"
-            android:textColor="#000"
-            app:layout_constraintEnd_toEndOf="parent" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
