background upload progressbar UI

--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -11,6 +11,7 @@
     <color name="app_trans_red">#D54058</color>
     <color name="sign_in_out_text_red_color">#FF9BA8</color>
     <color name="app_nav_bg">#f4eded</color>
+    <color name="black_15">#26000000</color>
 
     <color name="a_light_blue">#e3eaff</color>
     <color name="a_light_pink">#ffedf0</color>
