--- a/MyCity4Kids/MyCity4Kids/res/layout/video_upload_progress_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_upload_progress_activity.xml
@@ -49,8 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/status"
-            android:layout_margin="@dimen/space_10"
-            android:background="@color/grey_light">
+            android:background="@color/black_15">
 
             <TextView
                 android:id="@+id/video_name"
@@ -58,6 +57,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="middle"
                 android:singleLine="true"
+                android:textColor="#333333"
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
@@ -82,11 +82,11 @@
 
             <ImageView
                 android:id="@+id/cancel_upload"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/space_10"
-                android:src="@drawable/ic_clear_search" />
+                android:layout_marginRight="@dimen/space_5"
+                app:srcCompat="@drawable/ic_close_video" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -98,7 +98,7 @@
                 <ProgressBar
                     android:id="@+id/progressBar"
                     style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
-                    android:layout_width="260dp"
+                    android:layout_width="280dp"
                     android:layout_height="8dp"
                     android:layout_marginRight="@dimen/space_10"
                     android:progressDrawable="@drawable/progress_bar" />
