--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -53,4 +53,5 @@
     <dimen name="space_20">20dp</dimen>
     <dimen name="space_10">10dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="space_5">5dp</dimen>
 </resources>
