--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
@@ -5,17 +5,17 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
     android:background="@color/white_color"
-    android:paddingBottom="4dp"
     android:paddingLeft="10dp"
+    android:paddingTop="8dp"
     android:paddingRight="10dp"
-    android:paddingTop="8dp">
+    android:paddingBottom="4dp">
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/userImageView"
         android:layout_width="@dimen/ad_comments_profile_pic_width"
         android:layout_height="@dimen/ad_comments_profile_pic_width"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/author_img"
         android:src="@drawable/default_commentor_img"
@@ -28,8 +28,8 @@
         android:id="@+id/usernameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="3dp"
         android:layout_marginStart="3dp"
+        android:layout_marginLeft="3dp"
         android:layout_marginTop="4dp"
         android:layout_toEndOf="@+id/userImageView"
         android:layout_toRightOf="@+id/userImageView"
@@ -46,9 +46,9 @@
         android:id="@+id/postDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/usernameTextView"
-        android:layout_alignStart="@+id/usernameTextView"
         android:layout_below="@id/usernameTextView"
+        android:layout_alignStart="@+id/usernameTextView"
+        android:layout_alignLeft="@+id/usernameTextView"
         android:layout_marginTop="2dp"
         android:ellipsize="end"
         android:paddingLeft="5dp"
@@ -62,8 +62,8 @@
         android:id="@+id/postSettingImageView"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:paddingLeft="15dp"
@@ -76,9 +76,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/userImageView"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
-        android:layout_marginTop="15dp"
         android:gravity="start"
         android:text=""
         android:textColor="@color/groups.grey"
@@ -98,10 +98,10 @@
             android:id="@+id/option1Container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/polls_border_bg"
             android:orientation="vertical"
@@ -118,9 +118,9 @@
                 android:id="@+id/pollOption1ProgressBar"
                 android:layout_width="match_parent"
                 android:layout_height="28dp"
-                android:layout_alignBottom="@+id/option1ImageView"
                 android:layout_alignLeft="@+id/option1ImageView"
                 android:layout_alignRight="@+id/option1ImageView"
+                android:layout_alignBottom="@+id/option1ImageView"
                 android:layout_margin="1dp"
                 android:visibility="gone"
                 app:rcBackgroundColor="@color/white"
@@ -135,8 +135,8 @@
                 android:id="@+id/pollOption1TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/pollOption1ProgressBar"
                 android:layout_alignTop="@+id/pollOption1ProgressBar"
+                android:layout_alignBottom="@+id/pollOption1ProgressBar"
                 android:layout_marginLeft="5dp"
                 android:background="@color/transparent"
                 android:clickable="false"
@@ -151,10 +151,10 @@
             android:id="@+id/option2Container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/polls_border_bg"
             android:orientation="vertical"
@@ -172,9 +172,9 @@
                 android:id="@+id/pollOption2ProgressBar"
                 android:layout_width="match_parent"
                 android:layout_height="28dp"
-                android:layout_alignBottom="@+id/option2ImageView"
                 android:layout_alignLeft="@+id/option2ImageView"
                 android:layout_alignRight="@+id/option2ImageView"
+                android:layout_alignBottom="@+id/option2ImageView"
                 android:layout_margin="1dp"
                 android:visibility="gone"
                 app:rcBackgroundColor="@color/white"
@@ -189,8 +189,8 @@
                 android:id="@+id/pollOption2TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/pollOption2ProgressBar"
                 android:layout_alignTop="@+id/pollOption2ProgressBar"
+                android:layout_alignBottom="@+id/pollOption2ProgressBar"
                 android:layout_marginLeft="5dp"
                 android:background="@color/transparent"
                 android:clickable="false"
@@ -215,10 +215,10 @@
             android:id="@+id/option3Container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:background="@drawable/polls_border_bg"
             android:orientation="vertical"
@@ -236,9 +236,9 @@
                 android:id="@+id/pollOption3ProgressBar"
                 android:layout_width="match_parent"
                 android:layout_height="28dp"
-                android:layout_alignBottom="@+id/option3ImageView"
                 android:layout_alignLeft="@+id/option3ImageView"
                 android:layout_alignRight="@+id/option3ImageView"
+                android:layout_alignBottom="@+id/option3ImageView"
                 android:layout_margin="1dp"
                 android:visibility="gone"
                 app:rcBackgroundColor="@color/white"
@@ -253,8 +253,8 @@
                 android:id="@+id/pollOption3TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/pollOption3ProgressBar"
                 android:layout_alignTop="@+id/pollOption3ProgressBar"
+                android:layout_alignBottom="@+id/pollOption3ProgressBar"
                 android:layout_marginLeft="5dp"
                 android:background="@color/transparent"
                 android:clickable="false"
@@ -269,10 +269,10 @@
             android:id="@+id/option4Container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:background="@drawable/polls_border_bg"
             android:orientation="vertical"
@@ -290,9 +290,9 @@
                 android:id="@+id/pollOption4ProgressBar"
                 android:layout_width="match_parent"
                 android:layout_height="28dp"
-                android:layout_alignBottom="@+id/option4ImageView"
                 android:layout_alignLeft="@+id/option4ImageView"
                 android:layout_alignRight="@+id/option4ImageView"
+                android:layout_alignBottom="@+id/option4ImageView"
                 android:layout_margin="1dp"
                 android:visibility="gone"
                 app:rcBackgroundColor="@color/white"
@@ -307,8 +307,8 @@
                 android:id="@+id/pollOption4TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/pollOption4ProgressBar"
                 android:layout_alignTop="@+id/pollOption4ProgressBar"
+                android:layout_alignBottom="@+id/pollOption4ProgressBar"
                 android:layout_marginLeft="5dp"
                 android:background="@color/transparent"
                 android:clickable="false"
@@ -344,7 +344,7 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:src="@drawable/ic_upvote"
-            android:tint="@color/app_red"/>
+            android:tint="@color/app_red" />
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/upvoteTextView"
@@ -375,7 +375,7 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:src="@drawable/ic_downvote"
-            android:tint="@color/app_red"/>
+            android:tint="@color/app_red" />
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/downvoteTextView"
@@ -394,8 +394,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/totalVoteCountTextView"
-        android:layout_marginRight="5dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
         android:layout_toLeftOf="@+id/addCommentImageView"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
@@ -411,8 +411,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/totalVoteCountTextView"
-        android:layout_marginRight="4dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="4dp"
         android:layout_toLeftOf="@+id/shareTextView"
         android:padding="5dp"
         android:src="@drawable/ic_comments"
@@ -422,15 +422,71 @@
         android:id="@+id/shareTextView"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_alignParentRight="true"
         android:layout_below="@+id/totalVoteCountTextView"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="10dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
-        android:paddingBottom="5dp"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp"
         android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
         android:src="@drawable/ic_share_white"
         android:tint="@color/app_red" />
+
+    <RelativeLayout
+        android:id="@+id/commentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/addCommentImageView"
+        android:layout_marginTop="@dimen/space_10"
+        android:background="@drawable/group_post_comment_round_corner_layout"
+        android:visibility="gone">
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/typeHere"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/space_10"
+            android:text="Type here"
+            android:textColor="@color/groups.grey"
+            android:textSize="12sp"
+            android:visibility="gone" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/beTheFirstOne"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/space_10"
+            android:text="@string/group_comment_be_the_first_text"
+            android:textColor="@color/groups.grey"
+            android:textSize="12sp"
+            android:visibility="gone"
+            app:fontName="oswald.ttf" />
+
+        <ImageView
+            android:id="@+id/audio"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:padding="4dp"
+            app:srcCompat="@drawable/ic_audio_record" />
+
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="40dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:src="@drawable/ic_add_image" />
+
+
+    </RelativeLayout>
 </RelativeLayout>
