--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
@@ -290,5 +290,65 @@
         android:paddingTop="5dp"
         android:src="@drawable/ic_share_white"
         android:tint="@color/app_red" />
+
+
+    <RelativeLayout
+        android:id="@+id/commentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/addCommentImageView"
+        android:layout_marginTop="@dimen/space_10"
+        android:visibility="gone"
+        android:background="@drawable/group_post_comment_round_corner_layout">
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/typeHere"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/space_10"
+            android:text="Type here"
+            android:textColor="@color/groups.grey"
+            android:textSize="12sp"
+            android:visibility="gone" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/beTheFirstOne"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/space_10"
+            android:text="@string/group_comment_be_the_first_text"
+            app:fontName="oswald.ttf"
+            android:textColor="@color/groups.grey"
+            android:textSize="12sp"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/audio"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:padding="4dp"
+            app:srcCompat="@drawable/ic_audio_record" />
+
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="40dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:src="@drawable/ic_add_image" />
+
+
+    </RelativeLayout>
+
+
+
 </RelativeLayout>
 
