--- a/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
@@ -65,16 +65,37 @@
                     android:textSize="20sp"
                     app:fontName="oswald_regular.ttf" />
 
-                <ImageView
-                    android:id="@+id/shareGroupImageView"
+                <LinearLayout
+                    android:id="@+id/shareGroupImageViewLinearLayoutContainer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignRight="@+id/groupImageView"
                     android:layout_alignTop="@+id/groupImageView"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:padding="12dp"
-                    android:src="@drawable/ic_share_white" />
+                    android:layout_alignRight="@id/groupImageView"
+                    android:layout_margin="7dp"
+                    android:background="@drawable/group_invite_round_layout">
+
+                    <ImageView
+                        android:id="@+id/shareGroupImageView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignLeft="@id/inviteText"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
+                        android:padding="7dp"
+                        android:src="@drawable/ic_share_white" />
+
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/inviteText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="7dp"
+                        android:text="@string/group_invite_text"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"
+                        app:fontName="oswald.ttf" />
+                </LinearLayout>
+
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
@@ -105,8 +126,8 @@
                             android:id="@+id/searchLogoImageView"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
-                            android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
+                            android:layout_alignParentLeft="true"
                             android:layout_centerVertical="true"
                             android:drawableTint="@color/groups.grey"
                             android:src="@drawable/ic_search"
@@ -195,11 +216,11 @@
             android:id="@+id/closeImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="15dp"
+            android:layout_alignParentBottom="true"
             android:layout_marginRight="15dp"
+            android:layout_marginBottom="15dp"
             android:padding="14dp"
             android:src="@drawable/cross_icon_back"
             android:tint="@color/white" />
@@ -229,8 +250,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:gravity="center"
                 android:text="CREATE ANNOUNCEMENTS"
                 android:textColor="@color/white"
@@ -479,9 +500,9 @@
         android:id="@+id/addPostFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="right|bottom"
         android:visibility="visible"
         app:fab_colorNormal="@color/app_red"
@@ -497,3 +518,4 @@
         android:visibility="gone" />
 
 </android.support.design.widget.CoordinatorLayout>
+
