--- a/MyCity4Kids/MyCity4Kids/res/layout/video_upload_progress_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_upload_progress_activity.xml
@@ -49,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/status"
+            android:padding="@dimen/space_10"
             android:background="@color/black_15">
 
             <TextView
@@ -98,7 +99,7 @@
                 <ProgressBar
                     android:id="@+id/progressBar"
                     style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
-                    android:layout_width="280dp"
+                    android:layout_width="260dp"
                     android:layout_height="8dp"
                     android:layout_marginRight="@dimen/space_10"
                     android:progressDrawable="@drawable/progress_bar" />
